# packed_booleans

./: .gitignore  Cargo.toml  README.md
src/: eight.rs  lib.rs  macros.rs  sixteen.rs
