[package]
name = "packed_booleans"
version = "0.2.0"
edition = "2021"
description = "A crate to pack booleans together."
license = "MIT"
repository = "https://github.com/cod10129/packed_booleans"
keywords = ["no_std", "packing"]
categories = ["no-std", "no-std::no-alloc"]

[dependencies]

[dependencies.serde]
version = "1.0.183"
default_features = false
features = ["derive"]
optional = true
